[project]

name = "invivo"

version = "0.0.1"

description = "invivo: Python tools for analysis of in vivo data."

readme = "README.md"

requires-python = ">=3.12"

license = {file = "LICENSE.txt"}

keywords = ["in vivo", "cell engineering", "lab", "biology"]

authors = [
  {name = "Hersh K. Bhargava", email = "hello@hershbhargava.com" }
]

maintainers = [
  {name = "Hersh K. Bhargava", email = "hello@hershbhargava.com" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/hbhargava7/invivo"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]